Move output above program state in embedded mode
Prevents jumping around. Thanks to Nik Baltatzis for the suggestion.

--- a/pytutor-customizations.css
+++ b/pytutor-customizations.css
@@ -73,3 +73,7 @@ div.ExecutionVisualizer .highlight-cur {
 .symbolic {
   font-size: 18pt;
 }
+
+#vizDiv.embedded #progOutputs {
+  margin: 0 20px 10px 20px; width: 400px;
+}
